--- a/인터넷 네트워크/인터넷 네트워크.md
+++ b/인터넷 네트워크/인터넷 네트워크.md
@@ -11,27 +11,26 @@ DNS
 
 인터넷 상에서 컴퓨터 둘은 어떻게 통신할까요?
 
-클라이언트 - 인터넷 - 서버
-
+`클라이언트 - 인터넷 - 서버`
 
 ## IP 
 
-아이피 주소를 통해서 인터넷 통신이 가능합니다.
+`아이피 주소를 통해서 인터넷 통신이 가능합니다.`
 
 클라이언트 - 100.100.100.1
 서버 - 200.200.200.2
 
 프로토콜 역할.
 
-지정한 IP 주소(IP Address)에 데이터 전달.
-패킷(Packet) 이라는 통신 단위로 데이터 전달.
+`지정한 IP 주소(IP Address)`에 데이터 전달.
+`패킷(Packet)` 이라는 통신 단위로 데이터 전달.
 
-클라이언트에 패킷을 전달 할 떄 -> 출발 IP, 목적 IP, 메시지
+클라이언트에 패킷을 전달 할 떄 -> `출발 IP`, `목적 IP`, `메시지`
 서로 노드끼리 던지면서 결국 최종적으로 미국에 있는 친구 200.200.200.2 까지 도달 하게 됩니다.
 
 IP 프로토콜의 한계.
 
-비연결성 - 패킷을 받을 대상이 없거나 서비스 불능 상태여도 패킷 전송.
+비연결성 - `패킷을 받을 대상이 없거나 서비스 불능 상태여도 패킷 전송.`
 비신뢰성 - 중간에 패킷이 사라지면? 패킷이 순서대로 안오면?
 프로그램 구분 - 같은 IP를 사용하는 서버에서 통신하는 애플리케이션이 둘 이상이면?
 
@@ -40,16 +39,14 @@ IP 프로토콜의 한계.
 
 중간에 서버가 문제가 생긴다면? -> 패킷이 유실됩니다.
 
-
-
-패킷의 용령이 클 떄가 있습니다.
+`패킷의 용령이 클 떄가 있습니다.`
 1500byte 가 넘으면 끊어서 보내 줍니다.
 
-서로 메시지를 1500byte 끊어서 보냅니다.
+`서로 메시지를 1500byte 끊어서 보냅니다.`
 노드를 타게 되는데, 중간에 서로 다른 노드를 탈 수 있습니다.
 그래서 순서가 1 2 로 와야 할 것이 2 1로 오게 됩니다.
 
-이런 문제를 해결 할 수 있는 것이 TCP UDP 프로토콜 입니다.
+`이런 문제를 해결 할 수 있는 것이 TCP UDP 프로토콜 입니다.`
 
 
 ## TCP UDP 
@@ -73,7 +70,7 @@ os - TCP, UDP
 TCP 순서. 
 
 1. 출발지 IP, 목적지 IP, 기타..
-2. 출발지 PORT, 목적지 PORT, 전송 제어, 순서, 검증 정보 ...
+2. `출발지 PORT, 목적지 PORT, 전송 제어, 순서, 검증 정보 ...`
 3. 전송 데이터 
 
 연결 지향 TCP 3 way handshake - (재랑 나랑 연결 됐는 지 안 됐는 지 확인 할 수 있습니다.)
@@ -127,9 +124,9 @@ TCP 는 3way 핸드 쉐이킹 갈려면 시간이 걸립니다.
 각 어떤 패킷이 들어오는 것들을 구분 할 것인가?
 
 
-TCP 에는 출발지 PORT, 목적지 PORT 가 있습니다.
-IP 는 목적지 서버를 찾는 것.
-PORT 서버 안에서 돌아가는 애플리케이션들을 구분하는 것들을 말합닏.
+`TCP 에는 출발지 PORT, 목적지 PORT 가 있습니다.`
+`IP 는 목적지 서버를 찾는 것.`
+`PORT 서버 안에서 돌아가는 애플리케이션들을 구분하는 것들을 말합니다.`
 
 
 게임 - 8090 PORT - 11220
@@ -159,3 +156,9 @@ HTTPS - 443
 그래서 도메인 네임 시스템 (DNS) 가 있습니다.
 
 - 전화번호부.
+
+클라이언트 IP 100.100.100.1 -> 도메인 명 - google.com(200.200.200.2) 
+DNS 서버 응답 : 200.200.200.2 -> 클라이언트 (100.100.100.1) 
+클라이언트 (100.100.100.1) -> 서버 (200.200.200.2)
+
+
